# bike-computer-32

./: .gitignore  README.MD
hardware/: BOM-Companion.xlsx
hardware/STEP/: Bike-Companion-32.step
hardware/STL/: BikeMountLower v1.stl  BikeMountUpper v2.stl  BottomFrame v4.stl  MainFrameGNSSExposed v2.stl
software/cpp/: CMakeLists.txt  Makefile  README.MD  main.cpp
software/cpp/include/: BoundingBox.hpp  CustomHandlers.hpp  Tile.hpp
software/esp32/esp32c3-bike-companion-32/: platformio.ini
software/esp32/esp32c3-bike-companion-32/include/: constgeoposition.h  geoposition.h  geopositionprovider.h  globalconfig.h  gnssmodule.h  gpxtrack.h  interppositionprovider.h  mathutils.h  screenelements.h  screens.h  serialutils.h  sharedspidevice.h  sharedspidisplay.h  sharedspimutex.h  sharedspisdcard.h  simpletile.h  tileblockrenderer.h  uirenderer.h
software/esp32/esp32c3-bike-companion-32/src/: constgeoposition.cpp  geoposition.cpp  gnssmodule.cpp  interppositionprovider.cpp  main.cpp  screens.cpp  serialutils.cpp  sharedspidisplay.cpp  sharedspimutex.cpp  sharedspisdcard.cpp  tileblockrenderer.cpp  uirenderer.cpp
software/esp32/esp32c3-display-test/: platformio.ini
software/esp32/esp32c3-display-test/include/: utils_drawing.h  utils_geo.h  utils_math.h
software/esp32/esp32c3-gnss-test/: platformio.ini
software/python/: README.MD  environment.yml
software/python/notebooks/: test_bounding_box.ipynb  test_bresenham.ipynb  test_loading.ipynb  test_plot_binary_map.ipynb  test_plot_partial_map.ipynb
software/python/src/: utils.py
(+3 files in other folders)
